# JAUT_BMSTU.Map

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: core_tests.yml
AppServer/baseClasses/: baseClient.h  baseConnection.h  baseServer.h  types.h
AppServer/httpClient/: CMakeLists.txt  httpClient.cpp  httpClient.h  httpClientConnection.cpp  httpClientConnection.h  main.cpp
AppServer/httpClient/httpClient/: clientTypes.h  httpClient.cpp  httpClient.h
AppServer/httpServer/: CMakeLists.txt  httpServer.cbp  httpServer.cpp  httpServer.h  httpServerConnection.cpp  httpServerConnection.h  main.cpp  router.cpp  router.h  serverTypes.h
AppServer/httpServer/managers/: bitopManager.cpp  bitopManager.h  cacheManager.h  mapManager.cpp  mapManager.h  serializers.h  serverTypes.h  types.h
AppServer/httpServer/managers/cacheData/: cacheFaculty
AppServer/httpServer/mockData/: 8floor.json
UI/: CMakeLists.txt  main.cpp
UI/src/: CMakeLists.txt  drawer.cpp  drawer.h  mainWindow.cpp  mainWindow.h  mapController.cpp
UI/tests/: test.cpp
core/: CMakeLists.txt  main.cpp  test_data.json
core/src/: CMakeLists.txt  core.cpp  core.hpp
core/src/misc/: geometry.hpp  utils.hpp
core/src/model/: Map.cpp  Map.hpp
core/src/network/: NetManager.hpp
core/src/view/: Map.cpp  Map.hpp
core/tests/: CMakeLists.txt.in  geometry_test.cpp  main.cpp  model_test.cpp  view_test.cpp
include/BMSTU_Map/: drawer.h  mainWindow.h
include/ui/: drawer.h  mainWindow.h  mapController.h
libs/: CMakeLists.txt  graph.cpp
libs/UI/: CMakeLists.txt  main.cpp
libs/UI/src/: mainWindow.cpp  mainWindow.h  mapController.h
libs/core/: CMakeLists.txt  main.cpp
libs/core/include/core/: ModelMap.hpp  ViewMap.hpp  core.hpp  database.h  graph.h  neighbour.h
libs/core/src/: ModelMap.cpp  ViewMap.cpp  database.cpp  graph.cpp
libs/core/tests/: CMakeLists.txt  geometry_test.cpp  graph_test.cpp  model_test.cpp  view_test.cpp
libs/graph/: database.cpp  database.h  graph.h  graph_test.cpp  neighbour.h
libs/network/: CMakeLists.txt  client_main.cpp  server_main.cpp
libs/network/cmake/: FindBoost.cmake
libs/network/include/network/: baseConnection.h  bitopManager.h  clientTypes.h  httpClient.h  httpServerConnection.h  mapManager.h  router.h
libs/network/src/: bitopManager.cpp  cacheManager.cpp  httpServer.cpp  router.cpp
libs/network/tests/: CMakeLists.txt  tests.cpp
libs/ui/: CMakeLists.txt  main.cpp
libs/ui/include/ui/: mainWindow.h
libs/ui/src/: drawer.cpp  mapController.cpp
libs/ui/tests/: CMakeLists.txt  test.cpp
network/: CMakeLists.txt  client_main.cpp  main.cpp  server_main.cpp
network/src/: CMakeLists.txt
network/src/baseClasses/: types.h
network/src/httpClient/: httpClient.h
network/src/httpServer/: httpServer.h  httpServerConnection.h  router.h
network/src/httpServer/managers/: bitopManager.h  cacheManager.h  mapManager.cpp
network/tests/: CMakeLists.txt
project/UI/: CMakeLists.txt  drawer.h  mainWindow.h  mapController.cpp  mapController.h
project/src/: main.cpp
project/test/: CmakeLists.txt  test.cpp
project/ui/: CMakeLists.txt
project/ui/include/: drawer.h  mainWindow.h
project/ui/src/: drawer.cpp  mainWindow.cpp  mapController.cpp
res/: CMakeLists.txt  database.cpp  database.h  graph.cpp  graph.h  graph_test.cpp  neighbour.h
src/: drawer.cpp  main.cpp  mainWindow.cpp  mapController.cpp
tests/: CMakeLists.txt  test.cpp  tests.cpp  testsClient.cpp  testsServer.cpp
